java 17 / sonar improvements